Fix notice position z-index

--- a/app/javascript/styles/component/notice.scss
+++ b/app/javascript/styles/component/notice.scss
@@ -1,4 +1,4 @@
-.notice-wrap {
+.navbar-notice {
   position: relative;
   height: 0;
   width: 100%;
@@ -9,6 +9,8 @@
     left: 50%;
     transform: translateX(-50%);
     padding: 7px 20px;
+    z-index: 999;
+
     @include breakpoint(md) {
       width: auto;
       padding-right: 140px;
@@ -25,7 +27,6 @@
   border-radius: 4px;
   box-shadow: 0px 5px 10px 0 rgba(153, 153, 153, 0.1);
   background: #F7F7F7;
-  z-index: 999;
   position: relative;
   color: $text-gray;
   &.notice-block {
